se agrego la pagina de galeria y sus imagenes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,413 +1,2 @@
-/* generales */
-html{box-sizing: border-box; font-size: 62.5%;}
-*, *::before, *::after{box-sizing: inherit; margin: 0; padding: 0;}
-body{font-size: 16px; font-family: 'Merriweather', serif; 
-    background-color: #D9AFD9;
-    background-image: -webkit-linear-gradient(0deg, #D9AFD9 0%, #97D9E1 23%, #ffffff 100%);
-    background-image: -moz-linear-gradient(0deg, #D9AFD9 0%, #97D9E1 23%, #ffffff 100%);
-    background-image: -o-linear-gradient(0deg, #D9AFD9 0%, #97D9E1 23%, #ffffff 100%);
-    background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 23%, #ffffff 100%);
-
-    }
-
-*{
-    text-decoration: none;
-}
-
-header{
-    width: 100%; 
-     position: fixed; 
-     top: 0;
-    left: 0;
-    background-image: url(../galeria/imagenes/fondo1.jpg);
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap');
-
-
-
-/* header superior */
-
-
-
-.header__superior{
-    max-width: 70%;
-    margin: 5px auto 20px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
-}
-
-.logo img{
-    width: 50px;
-}
-
-.datos-fundacion {
-    display: flex;
-}
-
-.datos-fundacion p{
-    margin: 10px;
-}
-
-
-/* BARRA MENU */
-
-.container__menu{
-    width: 100%;
-    height:70px;
-    background-color: #023877;
-    padding: 0px 20px;
-}
-
-.menu{
-    max-width: 70%;
-    margin: auto;
-    height: 100%;
-}
-
-nav{
-    height: 100%;
-}
-
-nav > ul {
-    height: 100%;
-    display: flex;
-}
-
-nav  ul  li{
-    height: 100%;
-    list-style: none;
-    position: relative;
-}
-
-nav > ul > li:first-child > a{
-    background-image: url(../galeria/imagenes/casa.png);
-    background-size: 24px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    padding: 20px 40px;
-}
-
-nav > ul > li:first-child:hover > a{
-    background-image: url(../galeria/imagenes/casa.png);
-    background-size: 24px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    
-}
-
-nav > ul > li > a{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 14px;
-    color: white;
-    text-transform: uppercase;
-    font-size: 14px;
-    transition: all 300ms ease;
-}
-
-nav > ul > li > a:hover{
-    transform: scale(1.1);
-    background-color: #0074c7;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-#selected{
-    transform: scale(1.1);
-    background-color: #0074c7;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-/* SUBMENU */
-
-nav ul li ul{
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    position: absolute;
-    top: 90px;
-    left: -5px;
-    padding: 14px 0;
-    visibility: hidden;
-    opacity: 0;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-    z-index: 10;
-    transition: all 300ms ease;
-}
-
-nav ul li:hover ul{
-    visibility: visible;
-    opacity: 1;
-    top: 70px;
-}
-
-nav ul li ul::before{
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: 12px solid transparent;
-    border-right: 12px solid transparent;
-    border-bottom: 12px solid white;
-    position: absolute;
-    top: -12px;
-    left: 20px;
-}
-
-nav ul li ul li a{
-    display: block;
-    color: #0099e9;
-    padding: 6px;
-    padding-left: 14px;
-    margin-top: 10px;
-    font-size: 14px;
-    text-transform: uppercase;
-    transition: all 300ms ease;
-}
-
-nav ul li ul li a:hover{
-    background-color: #0074c7;
-    color: #fff;
-    transform: scale(1.1);
-    padding-left: 30px;
-    font-size: 14px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-/* Elementos responsivos */
-
-.icon__menu{
-    font-size: 26px;
-    color: white;
-    cursor: pointer;
-    width: 26px;
-    height: 100%;
-    display: none;
-    align-items: center;
-}
-
-#label__check{
-    width: 26px;
-    height: 100%;
-    display: none;
-}
-
-#check__menu{
-    display: none;
-}
-
-@media  screen and (max-width:760px) {
-    .search input{
-        display: none;
-    }
-
-    .header__superior{
-        padding: 10px;
-    }
-
-    .logo img{
-        width: 50px;
-    }
-
-    nav > ul{
-        flex-direction: column;
-        background-color: #023877;
-        position: fixed;
-        left: 0;
-        top: 158px;
-        width: 100%;
-        height: 0px;
-        transition: all 300ms ease;
-        z-index: 100;
-        opacity: 0;
-        visibility: hidden;
-    }
-
-    nav > ul > li > a:hover{
-        transform: scale(1);
-
-    }
-
-    nav ul li ul{
-        left: 90px;
-    }
-
-    nav > ul > li:hover ul{
-        top: 50px;
-    }
-
-    nav > ul > li:first-child a{
-        background-position: 20px;
-    }
-
-    #selected{
-        transform: scale(1);
-    }
-
-    #label__check{
-        display: block;
-    }
-
-    .icon-menu{
-        display: block;
-    }
-
-    #check__menu:checked ~ nav > ul{
-        height: 300px;
-        visibility: visible;
-        opacity: 1;
-    }
-}
-
-/* fondos */
-.fondos{
-    margin-top: 167px;
-    width: 100%;
-    height: 350px;
-    
-}
-
-.slider{
-    margin: 20px auto;
-    width: 70%;
-    height: 400px;
-    overflow: hidden;
-}
-
-.slider ul{
-    display: flex;
-    animation: cambio 20s infinite alternate linear;
-    width: 400%;
-}
-
-.slider li{
-    width: 100%;
-    list-style: none;
-}
-
-.slider img{
-    width: 100%;
-    height: 100%;
-}
-
-@keyframes cambio{
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
-    
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-    
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-    
-}
-
-/* organizaciones */
-.organizaciones{
-    width: 70%;
-    margin: 100px auto;
-    text-align: center;
-}
-
-
-
-.cajas{
-    margin: 20px 0;
-    display: flex;
-}
-
-.cajas-organizaciones{
-    width: 30%;
-    height: 110px;
-    text-align: center;
-    margin: 10px;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-    border-radius: 10px;
-     transition: all 400ms ease; 
-}
-
-.caja-1{
-    background-image: url(../galeria/imagenes/netflix.png);
-    
-}
-
-.caja-2{
-    background-image: url(../galeria/imagenes/apple.jpg);
-}
-.caja-3{
-    background-image: url(../galeria/imagenes/nasa.png);
-}
-.caja-4{
-    background-image: url(../galeria/imagenes/area51.jpg);
-}
-
- .descrpcion{
-   display: none;
-}
-
-.cajas-organizaciones:hover{
-    width: 40%;
-    height: 160px;
-  
-}
-
-.cajas-organizaciones:hover .descrpcion{
-    background-color: rgb(128 128 128 / 70%);
-    color: white;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 0 10px;
-}
-
-.descrpcion p{
-    font-size: 15px;
-    
-}
-
- 
-@media (max-width: 720px) { 
-
-    .header__superior{
-        display: block;
-        margin: 0 auto;
-    }
-
-    .logo {
-        text-align: center;
-    }
-
-    .datos-fundacion {
-        display: none;
-    }
-
-    .slider{
-        width: 100%;
-    }
-
-    .cajas{
-        display: block;
-    }
-    .cajas-organizaciones{
-        height: 200px;
-        width:100%
-    }
-
-    .cajas-organizaciones:hover {
-        width: 100%;
-        height: 200px;
-    }
-
-    
-} 
+@import url(galeria.css);
+@import url(inicio.css);
